--- a/APP/www/new-event.html
+++ b/APP/www/new-event.html
@@ -92,6 +92,11 @@
               MARCH 2016
             </p>
           </div>
+          <div class="calendar-wrapper">
+            <button id="btnPrev" type="button">Prev</button>
+            <button id="btnNext" type="button">Next</button>
+            <div id="divCal"></div>
+          </div>
 
           <div class="wrapper-symmetric">
             <div class="today">
