--- a/APP/www/interest.html
+++ b/APP/www/interest.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>interest</title>
+  <title>Interest</title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
@@ -17,11 +17,13 @@
   <!-- ionic/angularjs js -->
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
   <script src="js/slick.min.js"></script>
-  <script src="js/main.js"></script>
+  <!--<script src="js/main.js"></script>-->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
+
+
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
@@ -49,16 +51,16 @@
           Please select one category, add two venue types,
           and two themes. For most precise audience targeting.
         </p>
-        <div class="interest-category clear">
-          <div class="category-item">Taste</div>
-          <div class="category-item">Art, Film & Culture</div>
-          <div class="category-item">Music</div>
-          <div class="category-item">Sports & Fitness</div>
-          <div class="category-item">Shopping & Services</div>
-          <div class="category-item">Body & Health</div>
-          <div class="category-item">Parties & Nightlife</div>
-          <div class="category-item">Career & Knowledge</div>
-          <div class="category-item">Hobbies & Recreation</div>
+        <div class="interest-category clear" ng-controller="interestCtrl" >
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Taste</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Art, Film & Culture</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Music</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Sports & Fitness</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Shopping & Services</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Body & Health</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Parties & Nightlife</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Career & Knowledge</div>
+          <div class="category-item"  ng-click="toggleClass($event, 'active')">Hobbies & Recreation</div>
         </div>
       </div>
 
