--- a/APP/www/live6.html
+++ b/APP/www/live6.html
@@ -25,6 +25,13 @@
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
+
+
+  <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
+  <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
+
+  <!-- google maps javascript -->
+  <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
 </head>
 <body ng-app="starter">
 
@@ -67,8 +74,10 @@
           </li>
         </ul>
       </div>
-      <div class="shouting-container">
-        <img src="img/live6.png" alt="">
+      <div class="shouting-container" ng-controller="MapCtrl">
+
+          <div id="map" data-tap-disabled="true"></div>
+
         <div class="slide-event">
           <div class="live-slider">
             <div class="live-item clear">
